fix: menu z-index

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -12,6 +12,7 @@
     --color-lime: #cbfb44;
     --color-yellow: #fff746;
     --color-pink: #ff76ce;
+    --color-purple: #aa53f2;
     --color-cyan: #6bfffe;
 }
 
